fix cropping small image

--- a/style.less
+++ b/style.less
@@ -36,3 +36,16 @@
 	max-width: 100%;
 	height: auto;
 }
+
+footer {
+	padding-bottom: 5px;
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	text-align: center;
+}
+
+footer, footer a {
+	color: #888;
+}
